Membuat Login Form dan Validasi Login

--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,9 @@
 	},
 	"require": {
 		"php": ">=5.3.7",
-		"jenssegers/blade": "*"
+		"jenssegers/blade": "*",
+		"vlucas/phpdotenv": "*",
+		"lulco/phoenix": "*"
 	},
 	"suggest": {
 		"paragonie/random_compat": "Provides better randomness in PHP 5.x"
